<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout Guru</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="accelerometerData">Accelerometer Data</string>
    <string name="xAxis">X Axis</string>
    <string name="zAxis">Z Axis</string>
    <string name="yAxis">Y Axis</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Workout Guru</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Save Profile</string>
    <string name="action_sign_in_short"><b>Sign in</b></string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="rememberMe">Remember Me</string>
    <string name="title_activity_register_user">RegisterUser</string>

    <!-- Strings related to Register User -->
    <string name="signup">Profile Information</string>
    <string name="username">UserName</string>
    <string name="age">Age (in years)</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight (in pounds)</string>
    <string name="height">Height (in inches)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Entries for action bar -->
    <string name="action_setGoals">Set Goals</string>
    <string name="action_reports">Analytics</string>
    <string name="action_recommendation">Recommendations</string>
    <string name="action_share">Share with Friends</string>
    <string name="action_run">Start Tracking</string>
    <string name="action_stop">Stop Tracking</string>
    <string name="action_clear">Clear History</string>

    <!-- Entries for the service -->
    <string name="serviceInit">Service is being initialized ....</string>
    <string name="serviceStarted">Activity Monitor initiated.</string>
    <string name="folderPath">folderPath</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>

    <!-- Entries for Charts -->
    <string name="ActivityTrend">Activity Trend</string>
    <string name="ActivityTrendDesc">Shows activity trend for past one week</string>
    <string name="caloriesChart">Calories Burnout</string>
    <string name="caloriesChartDesc">Shows the total calories burnt each activity for past one week</string>
    <string name="noActivityData">No Activity Data recorded so far</string>
    <string name="title_activity_accelerometer_demo">AccelerometerDemoActivity</string>

</resources>
