<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:wrkoutguru="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_run"
          android:icon="@drawable/ic_menu_myplaces"
          android:title="@string/action_run"/>
    <item android:id="@+id/action_stop"
          android:icon="@drawable/ic_menu_myplaces"
          android:title="@string/action_stop"/>
	<item android:id="@+id/action_setGoals"
          android:icon="@drawable/ic_menu_myplaces"
          android:title="@string/action_setGoals"/>
    <item android:id="@+id/action_reports"
          android:icon="@drawable/ic_menu_gallery"
          android:title="@string/action_reports" /> 
    <item android:id="@+id/action_recommendation"
          android:icon="@drawable/ic_menu_info_details"
          android:title="@string/action_recommendation" 
          android:showAsAction="ifRoom" />    
	<item android:id="@+id/action_share"
          android:icon="@drawable/ic_menu_allfriends"
          android:title="@string/action_share" 
          android:showAsAction="ifRoom" />
</menu>
