<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
<RelativeLayout 
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/labelActivity"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            
            android:layout_below="@id/labelActivity"
        	android:layout_alignParentRight="true"
            
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            
            android:layout_below="@id/txtUsername"
        	android:layout_alignParentRight="true"
        	
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtPassword"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/txtPassword"
            android:layout_alignBottom="@+id/txtPassword"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/prompt_password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/txtAge"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/txtAge"
            android:layout_alignBottom="@+id/txtAge"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:text="@string/age"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/txtUsername"
            android:layout_alignBottom="@+id/txtUsername"
            android:layout_alignLeft="@+id/labelActivity"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/txtAge"
            android:layout_alignTop="@+id/textView4"
            android:entries="@array/genderList" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="15dp"
            android:text="@string/weight"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/spinner1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/txtWeight"
            android:layout_marginTop="22dp"
            android:text="@string/height"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtWeight"
            android:layout_alignTop="@+id/textView6"
            android:inputType="numberDecimal"
            android:ems="10" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHeight"
            android:layout_marginTop="26dp"
            android:layout_toRightOf="@+id/textView6"
            android:text="@string/action_register" 
            android:onClick="saveUser"/>

	</RelativeLayout>
</ScrollView>